[package]
license = "MIT"
name = "bisetmap"
version = "0.1.3"
readme = "README.md"
description = "A fast thread-safe two-way hash map of sets"
authors = ["Arash Shakery <arash.shakery@gmail.com> (arash16.com)"]
keywords = ["bidirectional", "two-way", "map", "hashmap", "multimap"]
categories = ["data-structures", "algorithms"]
documentation = "https://docs.rs/bisetmap/"
homepage = "https://github.com/arash16/bisetmap/"
repository = "https://github.com/arasg16/bisetmap/"



[dependencies]
