[package]
license = "MIT"
name = "bisetmap"
version = "0.1.4"
readme = "README.md"
description = "BisetMap is a fast and thread-safe two-way hash map of sets. It is best suited where you need to associate two collumns uniquely. Each key is associated to one or more other unique values. The structure is interior mutable and all operations are thread safe. Each clone provides access to the same underlying data."
authors = ["Arash Shakery <arash.shakery@gmail.com> (arash16.com)"]
keywords = ["bidirectional", "two-way", "map", "hashmap", "multimap"]
categories = ["data-structures", "algorithms"]
documentation = "https://docs.rs/bisetmap/"
homepage = "https://github.com/arash16/bisetmap/"
repository = "https://github.com/arash16/bisetmap/"

[dependencies]
